:package: 99% React rewrite with hooks

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Saját bemutatkozó oldalam">
+    <meta name="keywords" content="webfejlesztés, web, dev, web development, html, css, js, javascript, vue, react, node, nodejs, express, firebase">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="3 Months">
+    <meta name="author" content="Sqveeze">
+    <meta name="copyright" content="2019 - Sqveeze">
+    <meta name="distribution" content="local">
+    <meta name="language" content="HU">
+    <meta name="rating" content="general">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,10 +31,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>.:Sqveeze:. - Bemutatkozó oldala</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Az oldal megjelenítéséhez engedélyezd a Javascript futtatását a böngésződben.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
